--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,25 @@
     	pointer-events: none
     }
 
+
+    .m_window{
+        position: absolute;
+        top: 0;
+        left: 2%;
+        pointer-events: none
+    }
+
     </style>
 </head>
 <body style="padding:0;margin:0">
+
     <!--build:lib(./) js/jquery.js-->
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <!-- endbuild -->
+    <!-- endbuild -->    
 
     <!--build:lib(./) js/phaser.js-->
     <script src="bower_components/phaser/build/phaser.js"></script>
-    <!-- endbuild -->
+    <!-- endbuild -->    
 
     <!--build:lib(./) js/three.js-->
     <script src="bower_components/threejs/build/three.js"></script>
@@ -31,5 +40,10 @@
     <!--build:js js/game.js-->
     <script src="js/game.js"></script>
     <!-- endbuild -->
+
+
+
+
+
 </body>
 </html>
