Lot of updates, new HUD system

--- a/src/menu.html
+++ b/src/menu.html
@@ -13,6 +13,14 @@
       pointer-events: none
     }
 
+    
+    .m_window{
+        position: absolute;
+        top: 0;
+        left: 2%;
+        pointer-events: none
+    }
+
     </style>
 </head>
 <body style="padding:0;margin:0">
@@ -38,7 +46,7 @@
 </body>
 </html>
 
-        <ul class="dropdown">
+<!--         <ul class="dropdown">
           <li><a href="#">Books-Videos</a>
             <ul class="sub_menu">
                <li><a href="#">Field Design &amp; Maintenance</a></li>
@@ -47,4 +55,4 @@
                <li><a href="#"> - VIEW ALL - </a></li>
             </ul>
           </li>
-        </ul>
+        </ul> -->
