--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>shipWar</title>
-
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <style>
 
     .threeClass{
@@ -13,13 +13,81 @@
     	pointer-events: none
     }
 
+    .bgClass{
+        position: absolute;
+        top: 0;
+        pointer-events: none;
+        z-index: -5;
+    }
 
     .m_window{
         position: absolute;
         top: 0;
         left: 2%;
-        pointer-events: none
+        /*pointer-events: none*/
+        z-index: 5;
     }
+
+    #btnOne{
+        display: none; 
+        background-color: blue;
+    }
+
+    #btnOne:hover {
+        background-color: green;
+    }
+
+    .fullscreenBG{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: grey;
+        z-index: -5;
+    }
+
+    #hud{
+        display: none;
+    }
+
+    #hud h1{
+        font-family: 'Open Sans';
+        font-size: 24px;
+        font-style: normal;
+        font-variant: normal;
+        font-weight: 700;
+        line-height: 26.4px;
+        color: white;
+    }
+
+    .hb_wrapper{
+        position: absolute;
+        left: 50%;
+        margin-left: -400px;
+        width: 800px;
+        height: 10px;
+        border-style: solid;
+        border-color: yellow;
+    }
+
+    .healthbar{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: red;
+        z-index: 5;
+    }
+
+    .scoreText{
+        position: absolute;
+        top: 5px;
+        left: 1px;
+    }
+    .timeText{
+        position: absolute;
+        top: 30px;
+        left: 1px;
+    }
+
 
     </style>
 </head>
@@ -35,15 +103,29 @@
 
     <!--build:lib(./) js/three.js-->
     <script src="bower_components/threejs/build/three.js"></script>
+    <script src="bower_components/threejs/examples/js/renderers/Projector.js"></script>
+    <script src="bower_components/threejs/examples/js/renderers/CanvasRenderer.js"></script>
+    
     <!-- endbuild -->
 
     <!--build:js js/game.js-->
     <script src="js/game.js"></script>
     <!-- endbuild -->
 
+    <!-- <script src="js/homeScene.js"></script> -->
 
+    <div class="m_window">
+      <div id="btnOne"><h1>Start</h1></div>
+    </div>
 
-
+    <div id="hud">
+        <div class="hb_wrapper">
+            <div class="healthbar"></div>
+        </div>
+        <div class="scoreText"><h1>Score: 0</h1></div>
+        <div class="timeText"><h1>Time: 0</h1></div>
+    </div>    
+    <div class="fullscreenBG"></div>
 
 </body>
 </html>
