--- a/src/index.html
+++ b/src/index.html
@@ -103,6 +103,7 @@
 
 
     #menu{
+        display: none;
         position: absolute;
         left: 50%;
         margin-left: -512px;
@@ -203,7 +204,9 @@
     <script src="bower_components/phaser/build/phaser.js"></script>
     <!-- endbuild -->    
 
+    <!--build:lib(./) js/circle-progress.js-->
     <script src="bower_components/jquery-circle-progress/dist/circle-progress.js"></script>
+    <!-- endbuild -->    
 
     <!--build:lib(./) js/three.js-->
     <script src="bower_components/threejs/build/three.js"></script>
